fix : 시도 기준으로 구군 조회 시, 중복해서 구군 반환되는 코드 수정 (#106)