@@ -1,9 +1,7 @@
 package com.breaditnow.customer.domain.region.service;
 
-import com.breaditnow.customer.domain.region.controller.res.DongResponse;
 import com.breaditnow.customer.domain.region.controller.res.GugunResponse;
 import com.breaditnow.customer.domain.region.controller.res.SidoResponse;
-import com.breaditnow.domain.domain.region.entity.Region;
 import com.breaditnow.domain.domain.region.repository.RegionRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -28,12 +26,9 @@ public class RegionService {
     }
 
     public List<GugunResponse> getGugunListBySido(String sidoCode) {
-        List<Region> regions = regionRepository.findDistinctById_SidoCodeOrderById_GugunCode(sidoCode);
-        return regions.stream().map(GugunResponse::of).collect(Collectors.toList());
-    }
-
-    public List<DongResponse> getDongListByGugun(String gugunCode) {
-        List<Region> regions = regionRepository.findById_GugunCodeOrderById_DongCode(gugunCode);
-        return regions.stream().map(DongResponse::of).collect(Collectors.toList());
+        List<Object[]> results = regionRepository.getGugunListBySido(sidoCode);
+        return results.stream()
+                .map(result -> new GugunResponse((String) result[0], (String) result[1], (String) result[2]))
+                .toList();
     }
 }
